# mlock-android

./: .gitignore  build.gradle  gradle.properties  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
mlock-library/: CMakeLists.txt  build.gradle  proguard-rules.pro
mlock-library/src/androidTest/java/com/prodbymozat/mlock/: ExampleInstrumentedTest.java  MLockCipherTest.java  MLockKeyStoreTest.java
mlock-library/src/androidTest/java/com/prodbymozat/mlock/cipher/: MLockCipherTest.java
mlock-library/src/androidTest/java/com/prodbymozat/mlock/keystore/: MLockKeyStoreTest.java
mlock-library/src/androidTest/java/com/prodbymozat/mlock/secure/: MLockCipherTest.java  MLockKeyStoreTest.java
mlock-library/src/main/: AndroidManifest.xml
mlock-library/src/main/cpp/: .gitignore  mlock.sln
mlock-library/src/main/cpp/mlock/: mlock.cxx  mlock.hxx  mlock.vcxproj  mlock.vcxproj.filters  mqlite3.h  msha2.hxx
mlock-library/src/main/cpp/mlock-tests/: mlock-tests.vcxproj  mlock-tests.vcxproj.filters  mlock_tests.cxx  msha2_test.cxx
mlock-library/src/main/java/com/prodbymozat/mlock/: MLock.java  MLockAsyncRetrieveListener.java  MLockCipher.java  MLockCipherAsymmetric.java  MLockCipherSymmetric.java  MLockData.java  MLockDouble.java  MLockFloat.java  MLockInteger.java  MLockInterface.java  MLockInternal.java  MLockKey.java  MLockKeyStore.java  MLockKeyStoreAsymmetric.java  MLockKeyStoreSymmetric.java  MLockNative.java  MLockNativeBridge.java  MLockString.java  package-info.java
mlock-library/src/main/java/com/prodbymozat/mlock/cipher/: MLockCipher.java  MLockCipherAsymmetric.java  MLockCipherSymmetric.java
mlock-library/src/main/java/com/prodbymozat/mlock/data/: MLockDataType.java  MLockString.java
mlock-library/src/main/java/com/prodbymozat/mlock/exceptions/: MLockException.java  MLockInitializedException.java  MLockInvalidContextException.java
mlock-library/src/main/java/com/prodbymozat/mlock/keystore/: MLockKeyStore.java  MLockKeyStoreAsymmetric.java  MLockKeyStoreSymmetric.java  MLockSymmetricKeyStore.java
mlock-library/src/main/java/com/prodbymozat/mlock/secure/: MLockAsymmetricCipher.java  MLockCipher.java  MLockKeyStore.java  MLockSymmetricCipher.java
mlock-library/src/main/res/values/: strings.xml
mlock-library/src/test/java/com/prodbymozat/mlock/: ExampleUnitTest.java  MLockUnitTest.java
mlock-sample/: build.gradle  proguard-rules.pro
mlock-sample/src/androidTest/java/com/prodbymozat/mlock/sample/: ExampleInstrumentedTest.kt
mlock-sample/src/main/: AndroidManifest.xml
mlock-sample/src/main/java/com/prodbymozat/mlock/sample/: MainActivity.kt
mlock-sample/src/main/res/values/: strings.xml
mlock-sample/src/test/java/com/prodbymozat/mlock/sample/: ExampleUnitTest.kt
